Tue Feb  3 02:31:55 CET 2004 (tk)
---------------------------------
  * libclamav: + don't report errors when archive limits are reached
	       + enabled scanning of "X-UIDL" mail files
  * clamscan: + don't count broken archives twice (bug reported by Przemyslaw
	        Holowczyc <doozer*skc.com.pl>)
	      + don't try to drop privileges in normal user mode when
	        clamscan is started with --mbox in stdin scanning mode
		(bug reported by Ed Ravin <eravin*panix.com>)
  * freshclam: + fixed -c handling (bug reported by scsi <scsi*softland.ru>)

Mon Feb  2 17:12:25 GMT 2004 (njh)
----------------------------------
  * libclamav:	Scan a rare form of bounce message identified by
  	Denis De Messemacker <ddm*e-labs.org>

Mon Feb  2 13:46:51 GMT 2004 (njh)
----------------------------------
  * libclamav:	   Carefully crafted binhex messages could have caused a crash
  * clamav-milter: Include the ID of the message when warnings are sent to
  	postmaster-only

Mon Feb  2 12:43:55 GMT 2004 (trog)
-----------------------------------
  * libclamav: ole2_extract.c: Add checks for compiler packed struct
	support. Fix sbat table in xbats bug. Fixup some data types.
	Add function to read ole2 header with compilers we don't know
	how to pack structures.

Mon Feb  2 09:55:12 GMT 2004 (njh)
----------------------------------
  * libclamav: Some instances of Worm.Dumaru.Y got through the net

Mon Feb  2 08:28:41 GMT 2004 (njh)
----------------------------------
  * contrib: added CLI to the Windows client to allow integration with
  	download managers, or scheduled scanning of an entire disc

Sun Feb  1 17:50:30 CET 2004 (tk)
---------------------------------
  * clamd: use putenv() instead of setenv() while setting TemporaryDirectory
	   (due to a compilation error on Solaris reported by Nigel)

Sun Feb  1 02:12:50 CET 2004 (tk)
---------------------------------
  * libclamav: + use strcasecmp() instead of strcmp() when comparing